--- a/julia/problem_051.ipynb
+++ b/julia/problem_051.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 51\n",
+    "# Problem 51\n",
     "https://projecteuler.net/problem=51"
    ]
   },
@@ -16,8 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Primes, Combinatorics, BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "using Primes, Combinatorics, BenchmarkTools"
    ]
   },
   {
@@ -25,17 +24,7 @@
    "execution_count": 2,
    "id": "4b20b298",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "undigit (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function undigit(l::Array{Int64, 1})::Int64\n",
     "    \"\"\"\n",
@@ -50,107 +39,30 @@
     "        s += n * 10^(i-1)\n",
     "    end\n",
     "    return s\n",
-    "end"
+    "end\n",
+    "\n",
+    "@assert undigit([0, 1, 2]) == 12\n",
+    "@assert undigit([1, 2, 0]) == 120"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8411c2e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "undigit([1, 0, 0, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "42106b7d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "replace_digits (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function replace_digits(n, d, idx)\n",
     "    \"\"\"\n",
-    "\n",
     "    julia> replace_digits(9999, 0, [2, 3])\n",
     "    9009\n",
-    "    \n",
     "    \"\"\"\n",
     "    digits_of_n = reverse(digits(n))\n",
     "    digits_of_n[idx] .= d\n",
     "    return undigit(digits_of_n)\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e5d79b82",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "119911"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "replace_digits(111111, 9, [3, 4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "85f1749a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10-element Vector{Int64}:\n",
-       " 110011\n",
-       " 111111\n",
-       " 112211\n",
-       " 113311\n",
-       " 114411\n",
-       " 115511\n",
-       " 116611\n",
-       " 117711\n",
-       " 118811\n",
-       " 119911"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "[replace_digits(111111, d, [3, 4]) for d in 0:9]"
+    "end\n",
+    "\n",
+    "@assert replace_digits(111111, 9, [3, 4]) == 119911"
    ]
   },
   {
@@ -163,47 +75,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "8c520fc0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "prime_digit_replacements (generic function with 3 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function prime_digit_replacements(treshold, n=1, info=false)\n",
-    "    n = 1 # start with primes of length n\n",
-    "    while true\n",
-    "        for p in primes(10^(n-1), (10^n)-1) # generate primes of length n\n",
-    "            for index_combination in powerset(1:n) # generate all index combinations in range 1:n\n",
-    "                valid_digits = 1 ∉ index_combination ? (0:9) : (1:9) # do not replace first digit with zero\n",
-    "                new_values = [replace_digits(p, d, index_combination) for d in valid_digits]\n",
-    "                if sum(isprime, new_values) == treshold && p in new_values\n",
-    "                    if info\n",
-    "                        new_primes = [x for x in new_values if isprime(x)]\n",
-    "                        println(\"Values changed for positions: \", index_combination),\n",
-    "                        println(\"Prime family: \", new_primes)\n",
-    "                    end\n",
-    "                    return p\n",
-    "                end\n",
-    "            end\n",
-    "        end\n",
-    "        n += 1\n",
-    "    end\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "9e80a2ca",
    "metadata": {},
    "outputs": [
     {
@@ -216,35 +89,64 @@
     }
    ],
    "source": [
-    "@assert prime_digit_replacements(7, 1, true) == 56003"
+    "function prime_digit_replacements(treshold, n=1, info=false)\n",
+    "    n = 1 # start with primes of length n\n",
+    "    while true\n",
+    "        for p ∈ primes(10^(n-1), (10^n)-1) # generate primes of length n\n",
+    "            for index_combination ∈ powerset(1:n) # generate all index combinations in range 1:n\n",
+    "                valid_digits = 1 ∉ index_combination ? (0:9) : (1:9) # do not replace first digit with zero\n",
+    "                new_values = [replace_digits(p, d, index_combination) for d ∈ valid_digits]\n",
+    "                if sum(isprime, new_values) == treshold && p ∈ new_values\n",
+    "                    if info\n",
+    "                        new_primes = [x for x ∈ new_values if isprime(x)]\n",
+    "                        println(\"Values changed for positions: \", index_combination),\n",
+    "                        println(\"Prime family: \", new_primes)\n",
+    "                    end\n",
+    "                    return p\n",
+    "                end\n",
+    "            end\n",
+    "        end\n",
+    "        n += 1\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "prime_digit_replacements(7, 1, true);\n",
+    "@assert prime_digit_replacements(7, 1) == 56003"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "89c7bacf",
+   "execution_count": 5,
+   "id": "713ab67c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "56003"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values changed for positions: [1, 3, 5]\n",
+      "Prime family: [121313, 222323, 323333, 424343, 525353, 626363, 828383, 929393]\n"
+     ]
     }
    ],
    "source": [
-    "prime_digit_replacements(7)"
+    "# info\n",
+    "prime_digit_replacements(8, 1, true);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "503f8269",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  651.731 ms (25113419 allocations: 1.18 GiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -256,46 +158,8 @@
     }
    ],
    "source": [
-    "prime_digit_replacements(8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "71d9eb04",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 7 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m751.016 ms\u001b[22m\u001b[39m … \u001b[35m760.447 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m6.78% … 8.30%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m759.131 ms               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m8.18%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m758.174 ms\u001b[22m\u001b[39m ± \u001b[32m  3.222 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m8.02% ± 0.55%\n",
-       "\n",
-       "  \u001b[39m█\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m█\u001b[39m \u001b[34m█\u001b[39m\u001b[39m \u001b[39m█\u001b[39m \u001b[39m█\u001b[39m \u001b[39m█\u001b[39m \u001b[39m \u001b[39m \u001b[39m█\u001b[39m \u001b[39m \n",
-       "  \u001b[39m█\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[32m▁\u001b[39m\u001b[39m▁\u001b[39m█\u001b[39m▁\u001b[34m█\u001b[39m\u001b[39m▁\u001b[39m█\u001b[39m▁\u001b[39m█\u001b[39m▁\u001b[39m█\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m█\u001b[39m \u001b[39m▁\n",
-       "  751 ms\u001b[90m           Histogram: frequency by time\u001b[39m          760 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m1.18 GiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m25113419\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark prime_digit_replacements(8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "713ab67c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(51, b);"
+    "# answer\n",
+    "@btime prime_digit_replacements(8)"
    ]
   },
   {
@@ -303,40 +167,39 @@
    "id": "6d042b38",
    "metadata": {},
    "source": [
-    "#### Solution 2"
+    "### Solution 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "7f48ec51",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "prime_digit_replacements_2 (generic function with 2 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "function prime_digit_replacements_2(treshold, n=1)\n",
+    "function prime_digit_replacements_solution_two(treshold, n=1)\n",
     "    for i in Iterators.countfrom(n), p ∈ primes(10^(i-1), (10^i)-1), index_combination ∈ powerset(1:i)\n",
     "        new_values = [replace_digits(p, d, index_combination) for d ∈ (1 ∉ index_combination ? (0:9) : (1:9))]\n",
     "        sum(isprime, new_values) == treshold && p ∈ new_values && return p\n",
     "    end\n",
-    "end"
+    "end\n",
+    "\n",
+    "@assert prime_digit_replacements_solution_two(7) == 56003"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "c4fc532e",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  656.790 ms (25113419 allocations: 1.18 GiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -348,72 +211,13 @@
     }
    ],
    "source": [
-    "prime_digit_replacements_2(8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "a40beabb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "ndigits(prime_digit_replacements_2(8))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "836a3692",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 16 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m297.123 ms\u001b[22m\u001b[39m … \u001b[35m465.149 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m6.12% … 5.90%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m310.375 ms               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m6.64%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m318.359 ms\u001b[22m\u001b[39m ± \u001b[32m 39.743 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m6.42% ± 0.68%\n",
-       "\n",
-       "  \u001b[39m▄\u001b[39m \u001b[39m \u001b[39m \u001b[39m█\u001b[34m▁\u001b[39m\u001b[39m▁\u001b[39m▁\u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[39m█\u001b[39m▆\u001b[39m▆\u001b[39m▁\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[32m▁\u001b[39m\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▆\u001b[39m \u001b[39m▁\n",
-       "  297 ms\u001b[90m           Histogram: frequency by time\u001b[39m          465 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m385.37 MiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m7260614\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark prime_digit_replacements_2(8, 6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "0fb5baa3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(51, b);"
+    "@btime prime_digit_replacements_solution_two(8)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -421,7 +225,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
