--- a/python/problem_041.ipynb
+++ b/python/problem_041.ipynb
@@ -32,7 +32,7 @@
    "id": "b25058b6",
    "metadata": {},
    "source": [
-    "### Solution"
+    "### Solution 1 (brute force)"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy"
+    "from sympy import primerange"
    ]
   },
   {
@@ -77,7 +77,7 @@
    ],
    "source": [
     "# answer\n",
-    "max(p for p in sympy.primerange(987654321) if ispandigital(p))"
+    "max(p for p in primerange(987654321) if ispandigital(p))"
    ]
   },
   {
@@ -90,13 +90,203 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8min 50s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+      "8min 48s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "# benchmark\n",
-    "%timeit -n1 -r1 max(p for p in sympy.primerange(987654321) if ispandigital(p))"
+    "%timeit -n1 -r1 max(p for p in primerange(987654321) if ispandigital(p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac4108c8",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (skip irrelevant pandigital ranges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "db0c0ba1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sympy import primerange\n",
+    "from itertools import permutations "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4df80876",
+   "metadata": {},
+   "source": [
+    "$$ \\text{sum(1:9) = 45} \\Rightarrow \\text{45 is dividable by 3} \\Rightarrow \\text{9-digit pandigitals are not prime} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "75d13ceb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# proof\n",
+    "all(int(''.join(str(n) for n in p)) % 3 == 0 for p in permutations(range(1, 10)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f17cccd1",
+   "metadata": {},
+   "source": [
+    "$$ \\text{sum(1:8) = 36} \\Rightarrow \\text{36 is dividable by 3} \\Rightarrow \\text{8-digit pandigitals are not prime} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "46650d25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# proof\n",
+    "all(int(''.join(str(n) for n in p)) % 3 == 0 for p in permutations(range(1, 9)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "864597cb",
+   "metadata": {},
+   "source": [
+    "$$ \\text{Check pandigitals of length 2 - 9; 1 excluded because 1 is not a prime} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "614287c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 -> False\n",
+      "3 -> False\n",
+      "4 -> True\n",
+      "5 -> False\n",
+      "6 -> False\n",
+      "7 -> True\n",
+      "8 -> False\n",
+      "9 -> False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# valid pandigital lengths\n",
+    "for i in range(2, 10):\n",
+    "    check = all(int(''.join(str(n) for n in p)) % 3 == 0 for p in permutations(range(1, i+1)))\n",
+    "    print(f'{i} -> {not check}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6c02f185",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ispandigital(n):\n",
+    "    return ''.join(sorted(str(n))) == ''.join(str(i) for i in range(1, len(str(n))+1))\n",
+    "\n",
+    "assert ispandigital(15243)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b6065389",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def largest_pandigital_prime():\n",
+    "    valid_primes = []\n",
+    "    prime_ranges = [\n",
+    "        primerange(\n",
+    "            int(''.join(str(n) for n in range(1, i+1))), \n",
+    "            int(''.join(str(n) for n in range(i, 0, -1)))+1\n",
+    "        ) for i in range(2, 10) if not all(int(''.join(str(n) for n in p)) % 3 == 0 for p in permutations(range(1, i+1)))]\n",
+    "    for prime_range in prime_ranges:\n",
+    "        valid_primes.extend(prime_range)\n",
+    "    for p in valid_primes[::-1]:\n",
+    "        if ispandigital(p):\n",
+    "            return p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "536bc1e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7652413"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "largest_pandigital_prime()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1309cac6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.42 s ± 75.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit largest_pandigital_prime()"
    ]
   },
   {
@@ -109,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "b7e49bf0",
    "metadata": {},
    "outputs": [
@@ -117,12 +307,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8min 51s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+      "3.4 s ± 6.28 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "bm = %timeit -o -n1 -r1 max(p for p in sympy.primerange(987654321) if ispandigital(p))\n",
+    "bm = %timeit -o largest_pandigital_prime()\n",
     "import euler\n",
     "euler.save_benchmark(41, bm)"
    ]
