--- a/julia/problem_052.ipynb
+++ b/julia/problem_052.ipynb
@@ -5,53 +5,70 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 52\n",
+    "# Problem 52\n",
     "https://projecteuler.net/problem=52"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f1fc974a",
+   "id": "6de76ef9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "972a518a",
+   "id": "f1fc974a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "sort_num (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "function sort_num(num)\n",
-    "    return join(sort([c for c in string(num)]))\n",
-    "end"
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e14b35ec",
+   "metadata": {},
+   "source": [
+    "### Solution 1 (brute force)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "972a518a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function sort_num(num)\n",
+    "    return join(sort([c for c in string(num)]))\n",
+    "end\n",
+    "\n",
+    "@assert sort_num(53124) == \"12345\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "401c6cef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "permuted_multiples (generic function with 1 method)"
+       "permuted_multiples_bf (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -59,11 +76,11 @@
     }
    ],
    "source": [
-    "function permuted_multiples(x, y)\n",
+    "function permuted_multiples_bf()\n",
     "    n = 1\n",
     "    while true\n",
     "        nums = Int64[]\n",
-    "        for f in x:y\n",
+    "        for f in 2:6\n",
     "            push!(nums, f*n)\n",
     "        end\n",
     "        if sort_num(nums[1]) == sort_num(nums[2]) == sort_num(nums[3]) == sort_num(nums[4]) == sort_num(nums[5])\n",
@@ -77,10 +94,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "da7388e0",
+   "execution_count": 5,
+   "id": "b48a83dc",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  54.916 ms (2857491 allocations: 111.18 MiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -92,28 +116,41 @@
     }
    ],
    "source": [
-    "permuted_multiples(2, 6)"
+    "@btime permuted_multiples_bf()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9344462d",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (limit ranges)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3098e9cb",
+   "metadata": {},
+   "source": [
+    "$$\\text{The highest multiplier is 6.}$$  \n",
+    "\n",
+    "$$\\text{So, for a 3-digit number the valid range is from} \\space 10^{2} \\space (= 100) \\space \\text{to} \\space \\frac{10^{3}-1}{6} \\space (≈ 167) \\text{.} \\space \\text{Else, multiplication by 6 makes it a 4-digit number.}$$  \n",
+    "\n",
+    "$$\\text{Likewise, for a 4-digit number} 10^{3} \\space (= 1000) \\space \\text{to} \\space \\frac{10^{4}-1}{6} \\space (≈ 1667) \\text{.}$$ \n",
+    "\n",
+    "$$\\text{And so on.}$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b48a83dc",
+   "execution_count": 6,
+   "id": "9e45efb6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BenchmarkTools.Trial: 82 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m58.052 ms\u001b[22m\u001b[39m … \u001b[35m62.835 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m 4.66% … 11.56%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m61.804 ms              \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m11.79%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m60.998 ms\u001b[22m\u001b[39m ± \u001b[32m 1.254 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m10.55% ±  1.90%\n",
-       "\n",
-       "  \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▃\u001b[39m \u001b[39m \u001b[39m▂\u001b[39m \u001b[39m▃\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▃\u001b[34m▆\u001b[39m\u001b[39m█\u001b[39m▅\u001b[39m▃\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[39m▄\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▄\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▇\u001b[39m█\u001b[39m▇\u001b[39m▅\u001b[39m█\u001b[39m▄\u001b[39m█\u001b[39m▇\u001b[39m▁\u001b[39m▁\u001b[39m▄\u001b[39m▄\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[32m▁\u001b[39m\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▄\u001b[39m▅\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m▁\u001b[39m▄\u001b[39m▅\u001b[39m \u001b[39m▁\n",
-       "  58.1 ms\u001b[90m         Histogram: frequency by time\u001b[39m        62.5 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m111.18 MiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m2857491\u001b[39m."
+       "permuted_multiples (generic function with 3 methods)"
       ]
      },
      "metadata": {},
@@ -121,23 +158,48 @@
     }
    ],
    "source": [
-    "b = @benchmark permuted_multiples(2, 6)"
+    "function permuted_multiples(a=2, b=6)\n",
+    "    for exp in Iterators.countfrom(1)\n",
+    "        for n in 10^exp:Int(floor(10^(exp+1)/b))\n",
+    "            if allequal(sort([_ for _ in string(n*i)]) for i in a:b)\n",
+    "                return n\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0848e7fc",
+   "execution_count": 7,
+   "id": "6c5da2d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  8.367 ms (603234 allocations: 20.71 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "142857"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "euler.save_benchmark(52, b);"
+    "@btime permuted_multiples()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -145,7 +207,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
