--- a/julia/problem_052.ipynb
+++ b/julia/problem_052.ipynb
@@ -102,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  54.916 ms (2857491 allocations: 111.18 MiB)\n"
+      "  54.023 ms (2857491 allocations: 111.18 MiB)\n"
      ]
     },
     {
@@ -134,9 +134,11 @@
    "source": [
     "$$\\text{The highest multiplier is 6.}$$  \n",
     "\n",
-    "$$\\text{So, for a 3-digit number the valid range is from} \\space 10^{2} \\space (= 100) \\space \\text{to} \\space \\frac{10^{3}-1}{6} \\space (≈ 167) \\text{.} \\space \\text{Else, multiplication by 6 makes it a 4-digit number.}$$  \n",
+    "$$\\text{So, for a 3-digit number the valid range is from} \\space 10^{2} \\space (= 100) \\space \\text{to} \\space \\frac{10^{3}-1}{6} \\space (≈ 166) \\text{.}$$  \n",
     "\n",
-    "$$\\text{Likewise, for a 4-digit number} 10^{3} \\space (= 1000) \\space \\text{to} \\space \\frac{10^{4}-1}{6} \\space (≈ 1667) \\text{.}$$ \n",
+    "$$ \\text{Else, multiplication by 6 makes it a 4-digit number.}$$  \n",
+    "\n",
+    "$$\\text{Likewise, for a 4-digit number} 10^{3} \\space (= 1000) \\space \\text{to} \\space \\frac{10^{4}-1}{6} \\space (≈ 1666) \\text{.}$$ \n",
     "\n",
     "$$\\text{And so on.}$$"
    ]
@@ -150,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "permuted_multiples (generic function with 3 methods)"
+       "permuted_multiples (generic function with 2 methods)"
       ]
      },
      "metadata": {},
@@ -158,10 +160,10 @@
     }
    ],
    "source": [
-    "function permuted_multiples(a=2, b=6)\n",
+    "function permuted_multiples(x=6)\n",
     "    for exp in Iterators.countfrom(1)\n",
-    "        for n in 10^exp:Int(floor(10^(exp+1)/b))\n",
-    "            if allequal(sort([_ for _ in string(n*i)]) for i in a:b)\n",
+    "        for n in 10^exp:Int(floor(10^(exp+1)/x))\n",
+    "            if allequal(sort([_ for _ in string(n*i)]) for i in 2:x)\n",
     "                return n\n",
     "            end\n",
     "        end\n",
@@ -179,7 +181,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  8.367 ms (603234 allocations: 20.71 MiB)\n"
+      "  8.325 ms (603234 allocations: 20.71 MiB)\n"
      ]
     },
     {
