--- a/julia/problem_051.ipynb
+++ b/julia/problem_051.ipynb
@@ -12,6 +12,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "4c3945c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(\"Julia v\", string(VERSION))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "8d522a49",
    "metadata": {},
    "outputs": [],
@@ -21,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4b20b298",
    "metadata": {},
    "outputs": [],
@@ -47,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "42106b7d",
    "metadata": {},
    "outputs": [],
@@ -75,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8c520fc0",
    "metadata": {},
    "outputs": [
@@ -116,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "713ab67c",
    "metadata": {},
    "outputs": [
@@ -136,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "503f8269",
    "metadata": {},
    "outputs": [
@@ -144,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  651.731 ms (25113419 allocations: 1.18 GiB)\n"
+      "  702.823 ms (25113419 allocations: 1.18 GiB)\n"
      ]
     },
     {
@@ -172,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7f48ec51",
    "metadata": {},
    "outputs": [],
@@ -189,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c4fc532e",
    "metadata": {},
    "outputs": [
@@ -197,7 +215,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  656.790 ms (25113419 allocations: 1.18 GiB)\n"
+      "  724.538 ms (25113419 allocations: 1.18 GiB)\n"
      ]
     },
     {
