--- a/julia/problem_003.ipynb
+++ b/julia/problem_003.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "65651911",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
     "    end\n",
     "end\n",
     "\n",
-    "sieve = Channel(eratosthenes)\n",
+    "sieve = Channel{Int64}(eratosthenes)\n",
     "\n",
     "@assert last([take!(sieve) for _ in 1:10]) == 29 \"10th prime should be 29\""
    ]
