--- a/julia/problem_052.ipynb
+++ b/julia/problem_052.ipynb
@@ -102,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  54.023 ms (2857491 allocations: 111.18 MiB)\n"
+      "  56.187 ms (2857491 allocations: 111.18 MiB)\n"
      ]
     },
     {
@@ -162,7 +162,7 @@
    "source": [
     "function permuted_multiples(x=6)\n",
     "    for exp in Iterators.countfrom(1)\n",
-    "        for n in 10^exp:Int(floor(10^(exp+1)/x))\n",
+    "        for n in 10^exp:(10^(exp+1) ÷ x)\n",
     "            if allequal(sort([_ for _ in string(n*i)]) for i in 2:x)\n",
     "                return n\n",
     "            end\n",
@@ -181,7 +181,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  8.325 ms (603234 allocations: 20.71 MiB)\n"
+      "  8.931 ms (603234 allocations: 20.71 MiB)\n"
      ]
     },
     {
